# CCBenefits

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.test.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml  grafana-sync.yml  grafana-validate.yml  integration.yml
backend/: prestart.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f594cb77e8d_add_notifications_table.py  1a0d92c08e94_add_renewal_date_to_user_cards.py  2105ed649052_add_indexes_on_push_tokens_and_.py  2dc0bfd9d9fb_add_push_tokens_and_notification_logs_.py  30eaa4a45ddd_add_unsubscribe_tokens_table.py  729e700f7e6b_add_composite_dedup_index_on_.py  a1b2c3d4e5f6_add_oauth_accounts_and_nullable_password.py  b3c4d5e6f7a8_add_closed_date_to_user_cards.py  bf8ee7cdc282_initial_schema.py
backend/ccbenefits/: auth.py  config.py  database.py  dependencies.py  email.py  helpers.py  main.py  metrics.py  middleware.py  models.py  notifications.py  oauth.py  oauth_helpers.py  observability.py  push.py  scheduler.py  schemas.py  seed.py  utils.py
backend/ccbenefits/routers/: auth.py  card_templates.py  feedback.py  notifications.py  usage.py  user_cards.py  users.py
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_auth.py  test_auth_api.py  test_close_reopen.py  test_database.py  test_dependencies.py  test_email.py  test_feedback_api.py  test_feedback_model.py  test_inbox.py  test_models.py  test_multi_year.py  test_multi_year_integration.py  test_notification_models.py  test_notification_schemas.py  test_notifications.py  test_oauth.py  test_oauth_endpoint.py  test_protected_routes.py  test_push.py  test_push_tokens.py  test_scheduler.py  test_seed.py  test_unsubscribe.py  test_user_cards_api.py  test_users_api.py  test_verification.py
backend/tests/integration/: conftest.py  test_api_smoke.py
docs/: architecture.html  architecture.rst  conf.py  getting-started.rst  index.rst
docs/_static/: architecture.html
docs/api/: index.rst  models.rst  routers.rst  schemas.rst  utils.rst
docs/plans/: 2026-03-08-user-auth-design.md  2026-03-08-user-auth-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
frontend/src/__tests__/: App.test.tsx  OAuthConfig.test.tsx
frontend/src/components/: BarChart.tsx  BenefitRow.tsx  CardIcon.tsx  CardSummary.tsx  DonutChart.tsx  FeedbackModal.tsx  LoadingSpinner.tsx  NotificationPanel.tsx  PastYearBanner.tsx  ProtectedRoute.tsx  ROISummary.tsx  TabLink.tsx  UsageModal.tsx  UserMenu.tsx  UtilizationBar.tsx  VerificationBanner.tsx  YearPicker.tsx
frontend/src/constants/: categoryTheme.ts  issuerTheme.ts  periodLabels.ts
frontend/src/contexts/: AuthContext.tsx
mobile/: App.tsx  TESTING.md  app.config.js  app.json  eas.json  google-services.json  jest.config.js  package-lock.json  package.json
mobile/__mocks__/: expo-constants.ts  expo-notifications.ts  expo-secure-store.ts  expo-splash-screen.ts  react-native-safe-area-context.ts
mobile/scripts/: adb-screenshot-test.sh
mobile/src/: setup.ts  theme.ts  types.ts
scripts/: update-snapshots.sh
tests/e2e/: add-card.spec.ts  all-credits.spec.ts  helpers.ts  log-usage.spec.ts  login-dashboard.spec.ts  notifications.spec.ts  oauth-button.spec.ts  package-lock.json  package.json  playwright.config.ts  profile.spec.ts  visual-regression.spec.ts
(+76 files in other folders)
