[tool.poetry]
name = "ccbenefits"
version = "0.1.0"
description = "Credit Card Benefits Tracker"
authors = []
packages = [{include = "ccbenefits"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0"}
sqlalchemy = ">=2.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
PyJWT = ">=2.8.0"
pydantic = {extras = ["email"], version = ">=2.0"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
httpx = ">=0.27.0"
pytest-cov = "^7.0.0"
sphinx = "^9.1.0"
sphinx-autodoc-typehints = "^3.9.7"
sphinx-rtd-theme = "^3.1.0"
furo = "^2025.12.19"

[tool.pytest.ini_options]
addopts = "--cov=ccbenefits --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["ccbenefits"]
omit = ["ccbenefits/seed.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
