[tool.poetry]
name = "ccbenefits"
version = "0.1.0"
description = "Credit Card Benefits Tracker"
authors = []
packages = [{include = "ccbenefits"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0"}
sqlalchemy = ">=2.0"
bcrypt = ">=4.0.0"
PyJWT = ">=2.12.0"
pydantic = {extras = ["email"], version = ">=2.0"}
psycopg = {extras = ["binary"], version = ">=3.1.0"}
resend = ">=2.0,<3"
opentelemetry-sdk = ">=1.20"
opentelemetry-exporter-otlp-proto-http = ">=1.20"
opentelemetry-instrumentation-fastapi = ">=0.41b0"
opentelemetry-instrumentation-sqlalchemy = ">=0.41b0"
python-json-logger = ">=2.0"
alembic = "^1.18.4"
apscheduler = "^3.11.2"
httpx = "^0.28.1"
google-auth = ">=2.20.0"
python-multipart = ">=0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
httpx = ">=0.27.0"
pytest-cov = "^7.0.0"
sphinx = "^9.1.0"
sphinx-autodoc-typehints = "^3.9.7"
sphinx-rtd-theme = "^3.1.0"
furo = "^2025.12.19"
freezegun = "^1.5.5"
ruff = "^0.15.6"

[tool.pytest.ini_options]
addopts = "--cov=ccbenefits --cov-report=term-missing --cov-report=html --ignore=tests/integration"

[tool.coverage.run]
source = ["ccbenefits"]
omit = []

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "G004"]

[tool.ruff.lint.per-file-ignores]
"ccbenefits/email.py" = ["E501"]  # HTML email templates have long lines
"ccbenefits/notifications.py" = ["E501"]  # HTML email templates
"ccbenefits/middleware.py" = ["E501"]  # URL pattern mapping
"ccbenefits/seed.py" = ["E501"]  # Long benefit descriptions
"ccbenefits/main.py" = ["E402"]  # Middleware import after app setup is intentional
"tests/*" = ["E501", "E402"]  # Long test assertions and late imports are fine

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
